--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,7 @@ header {
     text-align: center; 
     border-left: 2px solid #799844; 
     transition: 0.3s;
+    font-size: 18px;
 }
 
 /* 最初のボタンの左境界線を削除 */
@@ -148,31 +149,25 @@ header {
     color: white; 
     text-decoration: none;
     padding: 20px; 
+    font-size: 20px;
 }
 
 /* クローズボタンのホバー時のスタイル */
 .close-btn:hover {
-    color: #799844; 
+    background-color: #799844;
 }
 
 /* サイドバーのリンク */
 .sidebar a {
     padding: 10px 15px;
     text-decoration: none;
-    font-size: 20px;
     display: block;
     transition: 0.3s;
 }
 
-/* サイドバーのリンクのホバー時のスタイル */
-.sidebar a:hover {
-    background-color: #799844;
-    color: white; 
-}
-
 /* サイドバーのリンク */
 .sidebar-link {
-    padding: 10px 15px;
+    padding: 5px 15px;
     text-decoration: none;
     font-size: 20px;
     color: #556B2F;
@@ -211,8 +206,8 @@ header {
 
 /* サイドバーの見出し */
 .sidebar-heading {
-    padding: 10px 15px;
-    font-size: 18px;
+    padding: 8px 15px;
+    font-size: 15px;
     font-weight: bold;
     color: #556B2F;
 }
@@ -222,11 +217,145 @@ header {
     border-bottom: 1px solid #799844;
 }
 
+/*お問い合わせなど*/
+.add {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 10px;
+}
+
+/*お問い合わせ*/
+#inquery {
+    color: #556B2F;
+    font-size: 15px;
+}
+
+/*よくあるご質問*/
+#qanda {
+    color: #556B2F;
+    font-size: 15px;
+}
+
+/*サイトマップ*/
+#map {
+    color: #556B2F;
+    font-size: 15px;
+}
+
+/*お問い合わせ等ホバー時のスタイル*/
+.inquery:hover {
+    text-decoration: underline;
+    color: #556B2F;
+}
+
+/* スライドショー */
+.slideshow-container {
+    position: relative;
+    max-width: 100%;
+    max-height: 500px;
+    overflow: hidden;
+    display: block;
+    margin: 0 auto;
+    padding: 2px 0; 
+    padding-bottom: 2px;
+}
+
+.mySlides {
+    display: none;
+}
+
+/* スライドショーの画像のスタイル */
+.mySlides img {
+    width: 100%;
+    vertical-align: middle;
+}
+
+/* 矢印ボタンのスタイル */
+.prev, .next {
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.5s ease;
+    border-radius: 0 3px 3px 0;
+}
+
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev:hover, .next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* 矢印ボタンを押したときのスタイル */
+.prev:active, .next:active {
+    background-color: #556B2F;
+}
+
+.dot-container {
+    position: absolute;
+    bottom: 10px;
+    width: 100%;
+    text-align: center;
+}
+
+.dot {
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 30%;
+    display: inline-block;
+    transition: background-color 0.3s ease;
+}
+
+/* アクティブなドットのスタイル */
+.active, .dot:hover {
+    background-color: #556B2F;
+}
+
+/* パンくずリストのスタイル */
+.breadcrumbs {
+    background-color: #d3d3d3;
+    padding: 10px 20px;
+    font-size: 14px;
+}
+
+.breadcrumbs a {
+    text-decoration: none;
+    color: #556B2F;
+}
+
+/*パンくずリストホバー時のスタイル*/
+.breadcrumbs a:hover {
+    text-decoration: underline;
+}
+
+/*最終パンくずリスト*/
+.breadcrumbs span {
+    color: #333;
+}
+
 /* コンテンツ */
 .content {
-    padding: 20px;
+    position: relative;
+    z-index: 1; 
+    padding: 0 20px;
     transition: 0.5s;
     color: #556B2F;
+    overflow: hidden;
+    font-size: 18.5px;
+}
+
+.content h2 {
+    font-size: 30px;
 }
 
 /* オーバーレイ */
@@ -243,6 +372,66 @@ header {
     pointer-events: none;
 }
 
+/*参照*/
 .reference {
     color: #556B2F;
+}
+
+/* 全体のコンテナ */
+.container {
+    display: flex;
+    flex-direction: row;
+    background: linear-gradient(45deg, #426899, #ffffff);
+}
+
+/* 左側パネル */
+.left-panel {
+    flex: 2;
+    padding: 20px;
+    border-right: 3px solid white;
+
+}
+
+/* 右側パネル */
+.right-panel {
+    flex: 1;
+    padding: 20px;
+}
+
+/*お知らせ*/
+#announcement-list {
+    list-style-type: none;
+    padding: 0 20px;
+}
+
+#announcement-list li {
+    margin-bottom: 10px;
+    background-color: #d3d3d3;
+    padding: 10px;
+    border-left: 10px solid #556B2F;
+}
+
+.announcement-list h2 {
+    color: white;
+    padding: 0 20px;
+}
+
+.announcement-date {
+    color: #626262;
+    font-size: 14px;
+}
+
+/* Responsive Design */
+@media screen and (max-width: 600px) {
+    .content {
+        margin-left: 0;
+    }
+
+    #sidebar {
+        width: 0;
+    }
+
+    #menu-icon {
+        display: block;
+    }
 }
