--- a/styles.css
+++ b/styles.css
@@ -4,18 +4,24 @@ body {
     background-color: white;
     margin: 0;
     padding: 0;
+    padding-top: 100px;
 }
 
 /* ヘッダー */
 header {
     font-family: 'Times New Roman';
-    background-color: #556B2F;
+    background-color: #556b2fe8;
     color: white;
     padding: 10px 20px;
     margin: 0; 
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 10;
 }
 
 /* タイトル */
@@ -24,6 +30,7 @@ header {
     flex-grow: 1;
     text-align: left;
     line-height: 1;
+    padding:0 35px;
 }
 
 /* ヘッダーアイコン */
@@ -63,14 +70,6 @@ header {
     color: #000000;
 }
 
-/* Xアイコン */
-.x-icon {
-    width: 20px;
-    height: 20px;
-    filter: invert(100%); 
-    text-decoration: none;
-}
-
 /* ホバー時のスタイル */
 .hover-effect:hover {
     filter: brightness(85%);
@@ -78,13 +77,18 @@ header {
 
 /* ナビゲーションボタンコンテナ */
 .nav-buttons {
-    background-color: #556B2F;
+    background-color: #556b2fd8;
     display: flex;
     justify-content: space-between;
     border-top: 2px solid #799844; 
     border-bottom: 2px solid #799844;
-    margin: 0;
+    margin: 3px 0;
     padding: 0; 
+    position: fixed;
+    top: 50px; 
+    left: 0;
+    width: 100%;
+    z-index: 9;
 }
 
 /* ナビゲーションボタン */
@@ -109,112 +113,6 @@ header {
     background-color: white;
     color: #556B2F;
     text-decoration: underline;
-}
-
-/* サイドバーのスタイル */
-.sidebar {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 3;
-    top: 0;
-    left: 0;
-    background-color: white;
-    overflow-x: hidden;
-    overflow-y: auto;
-    padding-top: 0;
-}
-
-/*サイドバーのタイトル*/
-.sidebar-title {
-    font-family: 'Times New Roman';
-    font-size: 20px;
-    color: white;
-    padding: 10px 20px;
-}
-
-/* サイドバーのヘッダー */
-.sidebar-header {
-    display: flex;
-    justify-content: space-between;
-    padding: 6px;
-    background-color: #556B2F;
-    position: relative;
-}
-
-/* クローズボタン */
-.close-btn {
-    position: absolute;
-    right: 10px; 
-    color: white; 
-    text-decoration: none;
-    padding: 20px; 
-    font-size: 20px;
-}
-
-/* クローズボタンのホバー時のスタイル */
-.close-btn:hover {
-    background-color: #799844;
-}
-
-/* サイドバーのリンク */
-.sidebar a {
-    padding: 10px 15px;
-    text-decoration: none;
-    display: block;
-    transition: 0.3s;
-}
-
-/* サイドバーのリンク */
-.sidebar-link {
-    padding: 5px 15px;
-    text-decoration: none;
-    font-size: 20px;
-    color: #556B2F;
-    display: block;
-    transition: 0.3s;
-    margin-bottom: 10px; 
-    position: relative;
-    display: flex; 
-    align-items: center;
-}
-
-/* サイドバーのリンクのホバー時のスタイル */
-.sidebar-link:hover {
-    background-color: #799844;
-    color: white;
-    text-decoration: underline;
-}
-
-/* サイドバーのリンクに一区切りのバーを追加 */
-.sidebar-link::after {
-    content: '';
-    display: block;
-    position: absolute;
-    bottom: -2px; 
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background-color: #556B2F;
-}
-
-/* サイドバー内のリンクのアイコン */
-.sidebar-link ion-icon {
-    margin: 0 10px;
-    vertical-align: middle;
-}
-
-/* サイドバーの見出し */
-.sidebar-heading {
-    padding: 8px 15px;
-    font-size: 15px;
-    font-weight: bold;
-    color: #556B2F;
-}
-
-/* サイドバーのグループ */
-.sidebar-group {
-    border-bottom: 1px solid #799844;
 }
 
 /*お問い合わせなど*/
