--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,29 @@ body {
     margin: 0;
     padding: 0;
     padding-top: 100px;
+
+    height: 100%;
+}
+
+#particles-js{ 
+	position:fixed;/*描画固定*/
+	z-index:-1;/*描画を一番下に*/
+	width: 100%;
+	height: 100%;
+	background-color:#35004D;/*背景色*/
+}
+
+#wrapper{
+	position: relative;/*描画を#particles-jsよりも上にするためposition:relative;を指定*/
+	z-index: 1;/*z-indexの数字を大きくすることで描画を#particles-jsよりも上に*/
+	width:100%;
+	height: 100%;
 }
 
 /* ヘッダー */
 header {
     font-family: 'Times New Roman';
-    background-color: #556b2fe8;
+    background-color: #556b2fea;
     color: white;
     padding: 10px 20px;
     margin: 0; 
@@ -56,18 +73,33 @@ header {
 .header-icons {
     display: flex;
     align-items: center;
+    gap: 10px;
 }
 
 /*githubアイコン*/
 .header-icon {
     color: white;
     font-size: 25px;
-    margin-left: 15px;
+    padding: 0;
     text-decoration: none;
+    display: flex;
 }
 
 .header-icon:hover {
     color: #000000;
+}
+
+/* X アイコン */
+.x-icon img {
+    padding-right: 35px;
+    width: 17px; 
+    height: 17px; 
+    position: relative;
+}
+
+/* ホバー時のスタイル */
+.x-icon:hover img {
+    filter: brightness(0%) contrast(100%);
 }
 
 /* ホバー時のスタイル */
