--- a/style.css
+++ b/style.css
@@ -13,12 +13,13 @@ body {
 
 /* background */
 #particles-js {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
     z-index: -1;
+    background-color: black;
 }
 
 /* icon */
