--- a/style.css
+++ b/style.css
@@ -97,6 +97,10 @@ h1 {
     background-color: #5878f7d1;
 }
 
+.it-line::before {
+    background-color: #0f99eed1;
+}
+
 /* hr */
 hr {
     border: none;
@@ -412,6 +416,83 @@ footer {
     color: inherit; 
 }
 
+/* album */
+.gallery-container {
+    text-align: center;
+    padding: 10px;
+}
+
+.filter-buttons {
+    margin-bottom: 70px;
+}
+
+.filter-btn {
+    font-family: 'Merriweather', serif;
+    padding: 8px 15px;
+    margin-top: 80px;
+    background-color: white;
+    color: black;
+    border: 1px solid #000;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    font-size: 15px;
+}
+
+.filter-btn:first-child {
+    margin-top: 10px; 
+}
+
+/* Common margin between buttons */
+.filter-btn:not(:first-child) {
+    margin-top: 10px; 
+}
+
+.filter-btn:hover {
+    background-color: #99ff6aee;
+    color: black;
+}
+
+.filter-btn.active {
+    background-color: #607e52ee;
+    color: white;
+}
+
+/* Gallery container */
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 10px;
+}
+
+/* Gallery items */
+.gallery-item {
+    position: relative;
+    overflow: hidden;
+    aspect-ratio: 1 / 1; /* Ensures items have a square aspect ratio */
+    width: 100%;
+    height: auto;
+}
+
+/* Gallery images */
+.gallery-item img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensures the image covers the container */
+    transition: transform 0.3s ease;
+}
+
+/* Hover effect for images */
+.gallery-item:hover img {
+    transform: scale(1.1); /* Slight zoom on hover */
+}
+
+/* Adjustments for Muuri */
+.item {
+    display: block;
+    padding: 0 10px 10px 10px; /* Padding inside each item */
+}
 
 /* scroll */
 .scrolldown3{
