--- a/style.css
+++ b/style.css
@@ -334,6 +334,65 @@ footer {
     background-color: #ffd900d8;
 }
 
+
+/* scroll */
+.scrolldown3{
+    position: fixed;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    animation: mousemove 1.6s ease-in-out infinite;
+}
+  
+@keyframes mousemove{
+    0%{bottom:10px;}
+    50%{bottom:5px;}
+    100%{bottom:10px;}
+}
+
+.scrolldown3 span{
+    position: absolute;
+    left:-15px;
+    bottom:45px;
+    color: #eee;
+    font-size: 0.7rem;
+    letter-spacing: 0.05em;
+}
+
+.scrolldown3 span::after{
+    content: "";
+    position: absolute;
+    top:10px;
+    left:17px;
+    width: 1px;
+    height: 15px;
+    background: #eee;
+    animation: mousepathmove 1.4s linear infinite;
+    opacity:0;
+}
+
+.scrolldown3:before {
+    content: "";
+    position: absolute;
+    bottom:0;
+    left:-10px;
+    width:25px;
+    height:37px;
+    border-radius: 10px;
+    border:1px solid #eee;
+}
+
+.scrolldown3:after{
+    content:"";
+    position: absolute;
+    bottom:26px;
+    left:0;
+    width:5px;
+    height: 5px;
+    border-radius: 50%;
+    border:1px solid #eee;
+}
+
 /* top */
 .scroll-top-button {
     position: fixed;
@@ -546,43 +605,6 @@ footer {
     height: auto; 
 }
 
-/* scroll */
-.scrolldown3{
-    position: fixed;
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    animation: mousemove 1.6s ease-in-out infinite;
-}
-  
-@keyframes mousemove{
-    0%{bottom:10px;}
-    50%{bottom:5px;}
-    100%{bottom:10px;}
-}
-
-.scrolldown3 span{
-    position: absolute;
-    left:-15px;
-    bottom:45px;
-    color: #eee;
-    font-size: 0.7rem;
-    letter-spacing: 0.05em;
-}
-
-.scrolldown3 span::after{
-    content: "";
-    position: absolute;
-    top:10px;
-    left:17px;
-    width: 1px;
-    height: 15px;
-    background: #eee;
-    animation: mousepathmove 1.4s linear infinite;
-    opacity:0;
-}
-
-
 .code-container {
     padding-left: 30px;
 }
@@ -638,28 +660,6 @@ pre.code-block {
     }
 }
 
-.scrolldown3:before {
-    content: "";
-    position: absolute;
-    bottom:0;
-    left:-10px;
-    width:25px;
-    height:37px;
-    border-radius: 10px;
-    border:1px solid #eee;
-}
-
-.scrolldown3:after{
-    content:"";
-    position: absolute;
-    bottom:26px;
-    left:0;
-    width:5px;
-    height: 5px;
-    border-radius: 50%;
-    border:1px solid #eee;
-}
-
 /* Project buttons container */
 .project-buttons {
     display: flex;
@@ -699,6 +699,11 @@ pre.code-block {
 .project-button:hover {
     background-color: #535353d1;
     transform: translateY(-5px);
+}
+
+.project-button i {
+    font-size: 50px;
+    margin-bottom: 10px;
 }
 
 /* media */
